--- a/index.html
+++ b/index.html
@@ -1,40 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tuition Free Charter School Located in Tampa">
-  <meta name="author" content="Jonathan Danek and Kyle Gray">
-  <title>Enroll | CCSE</title>
-  <link rel="shortcut icon" href="assets/favicon/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="assets/favicon/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="assets/favicon/favicon-192.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="assets/favicon/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96.png ">
-  <link rel="icon" type="image/png" sizes="64x64" href="assets/favicon/favicon-64.png ">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32.png ">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16.png ">
-  <link rel="apple-touch-icon" href="/favicon-57.png ">
-  <link rel="apple-touch-icon" sizes="114x114 " href="assets/favicon/favicon-114.png ">
-  <link rel="apple-touch-icon" sizes="72x72 " href="assets/favicon/favicon-72.png ">
-  <link rel="apple-touch-icon" sizes="144x144 " href="assets/favicon/favicon-144.png ">
-  <link rel="apple-touch-icon" sizes="60x60 " href="assets/favicon/favicon-60.png ">
-  <link rel="apple-touch-icon" sizes="120x120 " href="assets/favicon/favicon-120.png ">
-  <link rel="apple-touch-icon" sizes="76x76 " href="assets/favicon/favicon-76.png ">
-  <link rel="apple-touch-icon" sizes="152x152 " href="assets/favicon/favicon-152.png ">
-  <link rel="apple-touch-icon" sizes="180x180 " href="assets/favicon/favicon-180.png ">
-  <meta name="msapplication-TileColor " content="#FFFFFF ">
-  <meta name="msapplication-TileImage " content="assets/favicon/favicon-144.png ">
-  <meta name="msapplication-config " content="assets/favicon/browserconfig.xml ">
-	<link rel="stylesheet " media="screen " href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700 ">
-	<link rel="stylesheet " href="assets/css/bootstrap.min.css ">
-	<link rel="stylesheet " href="assets/css/font-awesome.min.css "> 
-	<link rel="stylesheet " href="assets/css/bootstrap-theme.css " media="screen "> 
-	<link rel="stylesheet " href="assets/css/style.css ">
-</head>
+  <head>
+  	<title>Portfolio | Site</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
-    <div class="app-container "></div>
+    <div class="app-container"></div>
   </body>
   <script src="bundle.js"></script>
-</html>
